# openvpn-multi-authentication-plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cpp-auth-service/src/: auth_clients.hpp  config.cpp  config.hpp  main.cpp
cpp-common/include/common/: logging.hpp  radius.hpp  url.hpp
cpp-openvpn-plugin/src/: config.cpp  config.hpp  plugin.cpp
cpp-radius-client/src/: main.cpp
systemd/: openvpn-multi-auth.service
